5/4/19
    - Added in Kingdom markers to the map, these are just for cairns for now and display their radius if desired
      Kingdom markers also allow you to name the realm they are for. Realm's can be assigned colors that are
      used for all markers of that realm. Changing the color is just like changing a marker color. You just
      need to select a cairn from the realm first that you want to change the color for. By default cairns are
      marked as ??? and assigned red
    - There are no options in Options window -> Gameplay for toggling off and on markers and specific categories
      of markers along with the radius of kingdom markers

5/1/19
    - Enhanced the Avatar tooltip to match the current Gob one

4/30/19
    - Added in options to never delete grids or gobs and made Map View distance 5 render everything it has

4/27/19
    - Add API for Buddy/Kin calls and VMeters (ie: fuel-level, etc) calls

4/26/19
    - When item on mouse is locked it won't show its tooltip anymore, allowing you to see the tooltips of other things
    - Fixed memory leak with hotbar keybinds and switching characters repeatedly.
    - Updated grid colors so that mines aren't colored black..

4/25/19
    - Fixed smelter hitboxes and bug with hitboxes that were customized
    - Added tracking angles to the map to try it out

4/16/19
    - Fixed black screen bug with Grid lines once you go into negatives
    - Changed parts of discord api

4/14/19
    - Minor changes to dig clay script, destroy
    - fixed issue with sketchpad crashing
    - Reduced aging for clicks
    - destumper script for more generic stump removal

4/13/19
    - Scout script is born
    - Added in Mark for script to the alt+ right click menu for scripts that need such input
    - destroy-objs script is back and more legacy fun
    - Few other fixes throughout

4/11/19
    - Scripting is now a thing, first few bots are the usual auto-drink, an eat-all-food in inventory, a acre-clay digger