@@ -88,9 +88,12 @@ public class Alerted {
             if (!name.equals("gfx/borka/body")) {
                 Audio.play(sfxmap.get(name));
             } else if (plgob != -1 && g.id != plgob) {
-                //For bodies only play on unknown or RED
+                //For bodies only play on unknown or RED or village/realm member that you don't have kinned
                 final KinInfo kin = g.getattr(KinInfo.class);
-                if (kin == null || kin.group == DefSettings.BADKIN.get()) {
+                if(kin != null) {
+                    System.out.println(kin.name);
+                }
+                if (kin == null || kin.group == DefSettings.BADKIN.get() || (kin.isVillager() && (kin.name == null || kin.name.equals("") || kin.name.equals(" ")))) {
                     Audio.play(sfxmap.get(name));
                 }
             }
